--- a/demo/styles.scss
+++ b/demo/styles.scss
@@ -10,6 +10,10 @@ $demo-app-theme:   mat-light-theme($demo-app-primary, $demo-app-accent, $demo-ap
 $font-family: 'Roboto', 'Noto', 'Helvetica Neue', sans-serif;
 $row-height: 56px;
 
+* {
+  box-sizing: border-box;
+}
+
 mat-toolbar {
   &.mat-medium {
     min-height: $row-height;
@@ -20,7 +24,7 @@ mat-toolbar {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(250, 250, 250) !important;
+  background-color: #fff !important;
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
