--- a/demo/app/demo.component.html
+++ b/demo/app/demo.component.html
@@ -1,21 +1,21 @@
 <div>
   Live data — from onChanges():
   <pre
-    [class.data-good]="
-!formValidationErrors && liveFormData !== '{}'
-"
+    [class.data-good]="!formValidationErrors && liveFormData !== '{}'"
     [class.data-bad]="formValidationErrors"
-  >
-{{ liveFormData | pure: getPrettyData}}</pre
+    >{{ liveFormData | pure: getPrettyData }}</pre
   >
 </div>
 
 <br />
-<json-schema-form
-  [JSONSchema]="schema"
-  [options]="jsonFormOptions"
-  [framework]="selectedFramework"
-  (onChanges)="onChanges($event)"
-  (onSubmit)="onSubmit($event)"
->
-</json-schema-form>
+<form auiForm>
+  <json-schema-form
+    [JSONSchema]="schema"
+    [data]="resource"
+    [options]="jsonFormOptions"
+    [framework]="selectedFramework"
+    (onChanges)="onChanges($event)"
+    (onSubmit)="onSubmit($event)"
+  >
+  </json-schema-form>
+</form>
